--- a/projects/01_fyyur/starter_code/requirements.txt
+++ b/projects/01_fyyur/starter_code/requirements.txt
@@ -2,4 +2,7 @@ babel==2.9.0
 python-dateutil==2.6.0
 flask-moment==0.11.0
 flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+flask_sqlalchemy==2.5.0
+jinja2==3.0.3
+Werkzeug==2.0.0
+SQLAlchemy==1.4
